fix wire and login api
